...
        }
    }

    Scaffold(
        topBar = {
            DetailTopBar(
                title = "프로필 설정",
                onBackClick = onBackClick,
            )
        },
        modifier = modifier,
        containerColor = Color.Transparent,
    ) { innerPadding ->
...
                )
            }
        }
        item {
            Spacer(modifier = Modifier.height(56.dp))
            AfternoteButton(
                text = "수정하기",
                onClick = { onUpdateClick(nameState.text.toString(), phoneState.text.toString()) },
                type = if (state.isUpdating) AfternoteButtonType.Un else AfternoteButtonType.Default,
                modifier =
                    Modifier
                        .padding(horizontal = 20.dp)
                        .fillMaxWidth(),
...
